All CRUD operations implemented